--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "jquery": "^3.6.0",
+        "jquery-mask-plugin": "^1.14.16",
         "vuex": "^3.6.2"
     }
 }
